--- a/src/app/modules/production/components/tab-pages/care-tab/care-tab.component.html
+++ b/src/app/modules/production/components/tab-pages/care-tab/care-tab.component.html
@@ -1,4 +1,4 @@
-<section class="mb-10 mb-md-20">
+<section class="pb-20 pb-md-10">
   <app-cover-block
     class=""
     [imgUrl]="this.coverImg"
@@ -15,14 +15,14 @@
       #consultationWords
       class="w-100 animation-bg-consultation_words d-sm-block d-none"
     ></div>
-    <div class="block__afterImg">
+    <div>
       <app-after-img-word-block
         [data]="this.consultation_cards[0]"
       ></app-after-img-word-block>
     </div>
   </div>
 </section>
-<section class="mb-10 mb-md-20">
+<section class="pb-20 pb-md-10">
   <div class="d-flex flex-column text-center align-items-center">
     <div class="care-system w-100 mb-5 px-10">
       <div class="d-none d-sm-flex flex-column gap-5">
@@ -112,7 +112,7 @@
       #traningWords
       class="w-100 animation-bg-trining_words d-sm-block d-none"
     ></div>
-    <div class="block__afterImg">
+    <div>
       <app-after-img-word-block
         [data]="this.traning_cards[0]"
       ></app-after-img-word-block>
