--- a/src/app/modules/production/components/tab-pages/medicine-tab/medicine-tab.component.html
+++ b/src/app/modules/production/components/tab-pages/medicine-tab/medicine-tab.component.html
@@ -118,7 +118,9 @@
                 <h5 class="fw-normal text-start ps-5 d-sm-block d-none">
                   {{ content }}
                 </h5>
-                <h6 class="fw-normal d-block d-block d-sm-none">{{ content }}</h6>
+                <h6 class="fw-normal d-block d-block d-sm-none">
+                  {{ content }}
+                </h6>
               </li>
             </ul>
           </div>
