--- a/src/app/modules/production/production.component.html
+++ b/src/app/modules/production/production.component.html
@@ -1,5 +1,6 @@
 <app-tab-set
   [tabs]="this.tabs"
   (onTabChange)="this.router.navigateByUrl($event.value)"
+  class="layer-normal"
 ></app-tab-set>
-<router-outlet></router-outlet>
+<router-outlet class="pt-md-20"></router-outlet>
