雲端、叫號調整

--- a/src/app/modules/production/components/blocks/after-img-word-block/after-img-word-block.component.scss
+++ b/src/app/modules/production/components/blocks/after-img-word-block/after-img-word-block.component.scss
@@ -97,7 +97,7 @@ ul.list-disc {
       width: 595px;
       height: 500px;
       border-radius: 28px 0 0 28px;
-      background-position: left !important;
+      background-position: center !important;
 
       @media screen and (max-width: 1279px) {
         width: 468px;
