--- a/src/app/modules/production/components/tab-pages/cloud-tab/cloud-tab.component.html
+++ b/src/app/modules/production/components/tab-pages/cloud-tab/cloud-tab.component.html
@@ -40,4 +40,4 @@
   </div>
   <div class="img position-absolute"></div>
 </div>
-<app-after-img-word-block [data]="this.infoCard"></app-after-img-word-block>
+<app-after-img-word-block class="block-bottom-gap" [data]="this.infoCard"></app-after-img-word-block>
