--- a/src/app/modules/common/pages/home-page/home-page.component.scss
+++ b/src/app/modules/common/pages/home-page/home-page.component.scss
@@ -80,7 +80,7 @@
 
   &__content {
     height: 6rem;
-    @include generateStyleByBreakpoint("sm") {
+    @media (min-width: 600px) {
       height: 3.125rem;
     }
 
@@ -117,6 +117,13 @@
     .component-arrow-forward-icon {
       height: 1.875rem;
       width: 1.875rem;
+    }
+  }
+
+  &__news-date {
+    @media (min-width: 600px) {
+      flex-direction: row !important;
+      align-items: center !important;
     }
   }
 }
