--- a/src/app/modules/shared/components/footer/footer.component.html
+++ b/src/app/modules/shared/components/footer/footer.component.html
@@ -1,28 +1,28 @@
-<hr class="divider-colored border-0 m-0 opacity-100" />
+<hr class="divider-colored border-0 m-0 opacity-100"/>
 <footer
-  class="d-flex flex-column-reverse justify-content-between align-items-center flex-md-row bg-black-9 px-8 pt-4_5 pb-7_5 px-sm-15 pb-sm-10 pt-sm-14_5 px-md-10 py-md-15 component-footer">
-  <div class="d-flex flex-column align-items-center align-items-md-start mt-10 mt-md-0">
+  class="d-flex flex-column-reverse justify-content-between align-items-center bg-black-9 px-8 pt-4_5 pb-7_5 component-footer">
+  <div class="d-flex flex-column align-items-center mt-10 component-footer__logo-container">
     <img src="assets/img/logo/logo_main.png" alt="footer-logo-main" class="component-footer__logo mb-2_5">
     <small>@copyright -2024 Syntrontech All Rights Reserved</small>
   </div>
 
-  <div class="d-flex flex-column flex-sm-row align-items-center component-footer__text-animation">
-    <div class="me-sm-25 text-center text-sm-start">
+  <div class="d-flex flex-column align-items-center component-footer__text-animation">
+    <div class="text-center component-footer__info">
       <h2 class="text-black-1 text-nowrap">聯絡我們</h2>
-      <h4 class="text-black-2 mb-5 mb-sm-10 text-nowrap">CONTACT US</h4>
-      <span class="d-flex mb-2_5 justify-content-center justify-content-sm-start">
+      <h4 class="text-black-2 mb-5 text-nowrap component-footer__contact-us">CONTACT US</h4>
+      <span class="d-flex mb-2_5 justify-content-center component-footer__phone">
         <p class="me-4 text-nowrap">電話</p>
         <p class="text-nowrap">02-2509-9072</p>
       </span>
-        <span class="d-flex mb-2_5 justify-content-center justify-content-sm-start">
+      <span class="d-flex mb-2_5 justify-content-center component-footer__fax">
         <p class="me-4 text-nowrap">傳真</p>
         <p class="text-nowrap">02-2509-9126</p>
       </span>
-        <span class="d-flex mb-2_5 justify-content-center justify-content-sm-start">
+      <span class="d-flex mb-2_5 justify-content-center component-footer__email">
         <p class="me-4 text-nowrap">Email</p>
         <p class="text-nowrap">Service@Syntrontech.Com</p>
       </span>
-      <span class="d-flex justify-content-center justify-content-sm-start mb-7_5 mb-sm-0">
+      <span class="d-flex justify-content-center component-footer__address mb-7_5">
         <p class="me-4 text-nowrap">公司地址</p>
         <p class="text-nowrap">台北市吉林路45號5樓之1</p>
       </span>
@@ -30,6 +30,7 @@
 
     <iframe
       class="component-footer__map border-0"
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d903.6213132293041!2d121.52959838743195!3d25.051537113850006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a966beb5401d%3A0xb7ca71f861acf3a!2zMTA0OTHlj7DljJfluILkuK3lsbHljYDlkInmnpfot680NeiZnw!5e0!3m2!1szh-TW!2stw!4v1700977523418!5m2!1szh-TW!2stw" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d903.6213132293041!2d121.52959838743195!3d25.051537113850006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a966beb5401d%3A0xb7ca71f861acf3a!2zMTA0OTHlj7DljJfluILkuK3lsbHljYDlkInmnpfot680NeiZnw!5e0!3m2!1szh-TW!2stw!4v1700977523418!5m2!1szh-TW!2stw"
+      allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
 </footer>
