fix: adjust footer class, remove same styles

--- a/src/app/modules/shared/components/footer/footer.component.html
+++ b/src/app/modules/shared/components/footer/footer.component.html
@@ -10,19 +10,19 @@
     <div class="text-center component-footer__info">
       <h2 class="text-black-1 text-nowrap">聯絡我們</h2>
       <h4 class="text-black-2 mb-5 text-nowrap component-footer__contact-us">CONTACT US</h4>
-      <span class="d-flex mb-2_5 justify-content-center component-footer__phone">
+      <span class="d-flex mb-2_5 justify-content-center component-footer__text-container">
         <p class="me-4 text-nowrap">電話</p>
         <p class="text-nowrap">02-2509-9072</p>
       </span>
-      <span class="d-flex mb-2_5 justify-content-center component-footer__fax">
+      <span class="d-flex mb-2_5 justify-content-center component-footer__text-container">
         <p class="me-4 text-nowrap">傳真</p>
         <p class="text-nowrap">02-2509-9126</p>
       </span>
-      <span class="d-flex mb-2_5 justify-content-center component-footer__email">
+      <span class="d-flex mb-2_5 justify-content-center component-footer__text-container">
         <p class="me-4 text-nowrap">Email</p>
         <p class="text-nowrap">Service@Syntrontech.Com</p>
       </span>
-      <span class="d-flex justify-content-center component-footer__address mb-7_5">
+      <span class="d-flex justify-content-center component-footer__text-container component-footer__address mb-7_5">
         <p class="me-4 text-nowrap">公司地址</p>
         <p class="text-nowrap">台北市吉林路45號5樓之1</p>
       </span>
