--- a/src/app/modules/shared/components/footer/footer.component.scss
+++ b/src/app/modules/shared/components/footer/footer.component.scss
@@ -52,19 +52,7 @@
     }
   }
 
-  &__phone {
-    @media (min-width: 700px) {
-      justify-content: start !important;
-    }
-  }
-
-  &__fax {
-    @media (min-width: 700px) {
-      justify-content: start !important;
-    }
-  }
-
-  &__email {
+  &__text-container {
     @media (min-width: 700px) {
       justify-content: start !important;
     }
@@ -72,7 +60,6 @@
 
   &__address {
     @media (min-width: 700px) {
-      justify-content: start !important;
       margin-bottom: 0 !important;
     }
   }
