--- a/src/app/modules/shared/components/menu/menu.component.html
+++ b/src/app/modules/shared/components/menu/menu.component.html
@@ -5,9 +5,8 @@
   <div
     class="component-menu__container vw-100 h-100 bg-white d-flex flex-column align-items-center overflow-y-auto"
   >
-    <app-header-spacing></app-header-spacing>
-    <div class="px-5 px-sm-10 w-100 pb-5 pb-sm-10">
-      <ul class="mt-10 mt-sm-5 w-100">
+    <div class="px-5 px-sm-10 w-100 pb-5 pt-6 pt-sm-5 pb-sm-10">
+      <ul class="w-100">
         <li class="mb-2">
           <app-menu-main-button
             [isFocus]="getIsFocus('/news-center/news')"
