--- a/src/app/modules/shared/components/menu/menu.component.scss
+++ b/src/app/modules/shared/components/menu/menu.component.scss
@@ -3,6 +3,10 @@
 .component-menu {
   max-height: 100vh;
   &__container {
+    padding-top: $header-height;
+    @include generateStyleByMaxBreakpoint("sm") {
+      padding-top: 3.125rem;
+    }
     @include generateStyleByBreakpoint("sm") {
       max-width: 100vw;
       width: 33.75rem !important;
