fix: video container box sizing and add 1440px up video, adjust mobile breakpoint

--- a/src/app/modules/common/pages/home-page/home-page.component.html
+++ b/src/app/modules/common/pages/home-page/home-page.component.html
@@ -1,11 +1,11 @@
 <section class="video-container position-relative">
-  <div class="d-flex justify-content-between video-container__gradient-bg">
+  <div class="d-flex video-container__gradient-bg">
     <p
       class="video-container__syntron-text text-white d-none d-sm-flex justify-content-center align-items-center"
     >
       SYNTRON
     </p>
-    <div class="position-relative d-flex">
+    <div class="position-relative d-flex video-container__container w-100">
       <video
         #tVideo
         class="video-container__video h-100"
