fix: 修正safari斷點切換時影片跑版問題

--- a/src/styles/_font.scss
+++ b/src/styles/_font.scss
@@ -1,4 +1,5 @@
 @import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
+@import url(//fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap);
 
 @font-face {
   font-family: "g5-customize";
