--- a/src/app/modules/production/components/blocks/after-img-word-block/after-img-word-block.component.scss
+++ b/src/app/modules/production/components/blocks/after-img-word-block/after-img-word-block.component.scss
@@ -58,6 +58,7 @@ ul.list-disc {
   }
 }
 
+
 .main {
   width: 100vw;
 
@@ -67,17 +68,18 @@ ul.list-disc {
       twink 1s ease-in-out;
 
     @media screen and (max-width: 1279px) {
-      max-width: 43rem;
-      text-align: center;
+      max-width: 100%;
     }
-
-    @include generateStyleByMaxBreakpoint("sm") {
-      margin-right: 5rem;
-      margin-left: 5rem;
-    }
-
   }
 
+  &__content {
+    @media screen and (max-width:1279px) {
+      padding-bottom: 2rem;
+    }
+    @media screen and (max-width:429px) {
+      padding-bottom: 1rem;
+    }
+  }
   .img {
     background-size: cover;
 
@@ -142,13 +144,6 @@ ul.list-disc {
   @include generateStyleByMaxBreakpoint("sm") {
     flex-direction: column;
 
-    & .main__content {
-      width: 332px;
-      margin: 0 20px;
-      padding-bottom: 20px;
-      border-radius: 20px;
-    }
-
     & .main__contentList {
       width: 332px;
       margin: 0 20px;
@@ -196,6 +191,10 @@ ul.list-disc {
   .text-md-start {
     text-align: left !important;
   }
+
+  .justify-content-md-center {
+    justify-content: center !important;
+  }
 }
 
 
@@ -217,6 +216,10 @@ ul.list-disc {
 
   .align-items-md-start {
     align-items: center !important;
+  }
+
+  .justify-content-md-center {
+    justify-content: left !important;
   }
 
   .text-sm-center {
